# common-cw-examples

./: README.md
anchor/: Cargo.toml  README.md
anchor/artifacts/: anchor.wasm  checksums.txt  checksums_intermediate.txt
anchor/schema/: config.json
anchor/src/: lib.rs  state.rs
anchor/src/handler/: core.rs  mod.rs  query.rs
anchor/src/querier/: anchor.rs
contracts/anchor/: README.md  build.sh
contracts/anchor/artifacts/: anchor.wasm  checksums.txt  checksums_intermediate.txt  pluton.wasm
contracts/anchor/examples/: schema.rs
contracts/anchor/schema/: execute_msg.json  instantiate_msg.json  pool_info.json  query_msg.json
contracts/anchor/src/: error.rs  (+3 more)
contracts/deposit/: Cargo.toml  README.md
contracts/interact/: Cargo.toml  README.md
contracts/send/: NOTICE  README.md
contracts/staking/: README.md
deposit/: README.md
deposit/artifacts/: checksums.txt  checksums_intermediate.txt  deposit.wasm
deposit/examples/: schema.rs
deposit/src/: contract.rs  msg.rs  state.rs
interact/: README.md
interact/examples/: schema.rs
interact/src/: contract.rs  state.rs
send/: Cargo.toml  README.md
send/artifacts/: checksums.txt  checksums_intermediate.txt  send.wasm
send/examples/: schema.rs
send/src/: contract.rs  msg.rs  state.rs
staking/: Cargo.toml
staking/src/: contract.rs
test/: README.md  mnemonics.txt  test.py
test/anchor/: execute.txt  initialize.txt  query.txt
test/deposits/: execute.txt  initialize.txt  query.txt
test/interact/: execute.txt  initialize.txt  query.txt
test/send/: execute.txt  initialize.txt  query.txt
(+16 files in other folders)
